# RecomendacionLiterarIA

./: README.md  dvc.yaml  params.yaml  pyproject.toml
data/raw/: .gitignore  books_google_dataset.csv.dvc
notebooks/: 0. Analisis Exploratorio de Datos.ipynb  1. Limpieza de datos e Ingenieria de caracteristicas.ipynb  2.  Análisis de sentimientos.ipynb  3. prueba modelos.ipynb
src/: clean_data.py  feature_engineering.py
