[tool.poetry]
name = "recomendacionliteraria"
version = "0.1.0"
description = ""
authors = ["juan c higuera c <juancahica@gmail.com>"]
license = "apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
scikit-learn = "^1.6.0"
dvc = "^3.58.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
